--- a/index.html
+++ b/index.html
@@ -1,35 +1,31 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Private Access — Multicloud Surveillance Platform</title>
-  <style>
-    body {font-family: system-ui, Arial, sans-serif; max-width: 860px; margin: 40px auto; line-height: 1.55;}
-    .btn {display:inline-block; padding:12px 18px; border:1px solid #111; text-decoration:none;}
-  </style>
-</head>
-<body>
-  <h1>Private Access — Multicloud Surveillance Platform</h1>
-  <p>Production-grade IaC (Terraform/Kubernetes), CI/CD pipelines, security baselines, and architecture docs. Delivery via private GitHub invite within <strong>24h</strong> (often 1–2h).</p>
+<!doctype html><html lang="en"><head>
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Private Access — Multicloud Surveillance Platform</title>
+<script src="https://www.paypal.com/sdk/js?client-id=YOUR_LIVE_CLIENT_ID&currency=USD"></script>
+<style>body{font-family:system-ui,Arial,sans-serif;max-width:860px;margin:40px auto;line-height:1.55}#paypal-button-container{margin-top:16px}</style>
+</head><body>
+<h1>Private Access — Multicloud Surveillance Platform</h1>
+<p>Production-grade IaC (Terraform/Kubernetes), CI/CD pipelines, security baselines, and architecture docs. Private GitHub invite within <b>24h</b> (often 1–2h). Purchase = EULA accepted.</p>
 
-  <h3>What you get</h3>
-  <ul>
-    <li>Terraform/Kubernetes modules ready to run</li>
-    <li>CI/CD pipelines</li>
-    <li>Security baselines</li>
-    <li>Architecture docs + runbooks</li>
-    <li>30-day issues-based support</li>
-  </ul>
+<div id="paypal-button-container"></div>
+<script>
+paypal.Buttons({
+  createOrder: (data, actions) => actions.order.create({
+    purchase_units: [{ amount: { value: '59.00' },
+      description: 'Private access to Multicloud Surveillance Platform repository' }]
+  }),
+  onApprove: (data, actions) => actions.order.capture().then(() => {
+    window.location.href = './success.html';
+  }),
+  onCancel: () => { window.location.href = './cancel.html'; },
+  onError:  () => { window.location.href = './cancel.html'; }
+}).render('#paypal-button-container');
+</script>
 
-  <p><strong>Before paying</strong>, have ready: your <em>GitHub username</em>, <em>company email/domain</em>, <em>cloud & region</em>, and your <em>#1 blocker</em>.</p>
-
-  <!-- TU PAYMENT LINK DIRECTO -->
-  <p><a class="btn" href="https://www.paypal.com/ncp/payment/JGUJ36TRU2JJU">Pay with PayPal</a></p>
-
-  <p style="font-size:0.9em;color:#444">
-    Purchase = acceptance of the <a href="https://raw.githubusercontent.com/fdaniel-alvarez-dev/security-platform-enterprise/main/EULA.md" target="_blank">EULA</a>. 
-    Do not use with live/sensitive data without your own security review.
-  </p>
-</body>
-</html>
+<h3>Pay by QR</h3>
+<a href="https://www.paypal.com/ncp/payment/JGUJ36TRU2JJU" target="_blank" rel="noopener">
+  <img src="./paypal-qr.png" alt="Pay with PayPal QR" width="220" height="220"/>
+</a>
+<p style="font-size:0.9em">Scan to purchase — private repo invite within 24h (often 1–2h).</p>
+  
+</body></html>
