--- a/index.html
+++ b/index.html
@@ -1,31 +1,405 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Private Access — Multicloud Surveillance Platform</title>
-<script src="https://www.paypal.com/sdk/js?client-id=YOUR_LIVE_CLIENT_ID&currency=USD"></script>
-<style>body{font-family:system-ui,Arial,sans-serif;max-width:860px;margin:40px auto;line-height:1.55}#paypal-button-container{margin-top:16px}</style>
-</head><body>
-<h1>Private Access — Multicloud Surveillance Platform</h1>
-<p>Production-grade IaC (Terraform/Kubernetes), CI/CD pipelines, security baselines, and architecture docs. Private GitHub invite within <b>24h</b> (often 1–2h). Purchase = EULA accepted.</p>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<div id="paypal-button-container"></div>
-<script>
-paypal.Buttons({
-  createOrder: (data, actions) => actions.order.create({
-    purchase_units: [{ amount: { value: '59.00' },
-      description: 'Private access to Multicloud Surveillance Platform repository' }]
-  }),
-  onApprove: (data, actions) => actions.order.capture().then(() => {
-    window.location.href = './success.html';
-  }),
-  onCancel: () => { window.location.href = './cancel.html'; },
-  onError:  () => { window.location.href = './cancel.html'; }
-}).render('#paypal-button-container');
-</script>
+  <title>Private Access — Multicloud Surveillance Platform</title>
+  <meta name="description" content="Purchase private access to the Multicloud Surveillance Platform repository. Production-grade IaC (Terraform/Kubernetes), CI/CD, security baselines, and runbooks. Invite within 24h.">
+  <link rel="canonical" href="https://fdaniel-alvarez-dev.github.io/msp-checkout/"/>
 
-<h3>Pay by QR</h3>
-<a href="https://www.paypal.com/ncp/payment/JGUJ36TRU2JJU" target="_blank" rel="noopener">
-  <img src="./paypal-qr.png" alt="Pay with PayPal QR" width="220" height="220"/>
-</a>
-<p style="font-size:0.9em">Scan to purchase — private repo invite within 24h (often 1–2h).</p>
-  
-</body></html>
+  <!-- Open Graph / Twitter for richer previews -->
+  <meta property="og:title" content="Private Access — Multicloud Surveillance Platform">
+  <meta property="og:description" content="Production-grade IaC, CI/CD, security baselines. Private GitHub invite within 24h (often 1–2h).">
+  <meta property="og:type" content="product">
+  <meta property="og:locale" content="en_US">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <!-- Prefers-reduced-motion for A11y -->
+  <style>
+    :root{
+      /* Design tokens (puedes ajustar a tu marca) */
+      --bg: #0b0c10;
+      --card: #111318;
+      --text: #e8ebf1;
+      --muted: #aeb6c2;
+      --brand: #21c08b;
+      --brand-600:#19a574;
+      --danger: #ff4d4f;
+      --focus: #8aa8ff;
+      --ring: 0 0 0 3px;
+      --radius: 14px;
+      --shadow: 0 10px 30px rgba(0,0,0,.35);
+      --maxw: 920px;
+      --padx: clamp(16px, 3vw, 24px);
+      --space-1: .5rem;
+      --space-2: .75rem;
+      --space-3: 1rem;
+      --space-4: 1.5rem;
+      --space-5: 2rem;
+      --space-6: 3rem;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+      line-height:1.6;
+      color:var(--text);
+      background: radial-gradient(1200px 800px at 10% -10%, #111318 0%, #0b0c10 60%, #0b0c10 100%);
+    }
+    a{color:var(--brand); text-decoration: none;}
+    a:hover{text-decoration: underline;}
+    .skip-link{
+      position:absolute; left:-999px; top:auto; width:1px; height:1px; overflow:hidden;
+    }
+    .skip-link:focus{
+      position:fixed; left:var(--padx); top:var(--padx); width:auto; height:auto; padding:.5rem .75rem;
+      background:#111318; color:var(--text); border-radius:8px; outline:var(--ring) var(--focus);
+      z-index:9999;
+    }
+
+    header{
+      border-bottom: 1px solid rgba(255,255,255,.08);
+      backdrop-filter: blur(4px);
+    }
+    .wrap{max-width:var(--maxw); margin:0 auto; padding: clamp(16px, 2.2vw, 24px) var(--padx);}
+    .hero{
+      display:grid; gap:var(--space-3);
+    }
+    h1{
+      font-size: clamp(1.75rem, 3.5vw, 2.5rem);
+      line-height:1.2;
+      margin:0 0 .25rem 0;
+      letter-spacing:.2px;
+    }
+    .lead{
+      color:var(--muted);
+      font-size: clamp(1rem, 1.4vw, 1.1rem);
+      max-width: 75ch;
+    }
+
+    main{display:block;}
+    .card{
+      background: linear-gradient(180deg, rgba(255,255,255,.025), rgba(255,255,255,.01));
+      border:1px solid rgba(255,255,255,.08);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding: clamp(16px, 2vw, 24px);
+    }
+    .grid{
+      display:grid;
+      grid-template-columns: 1fr;
+      gap: var(--space-4);
+    }
+    @media (min-width: 720px){
+      .grid{grid-template-columns: 1.6fr .9fr;}
+    }
+
+    form{display:grid; gap: var(--space-3);}
+    fieldset{
+      border:none; padding:0; margin:0;
+      display:grid; gap:var(--space-2);
+    }
+    label{font-weight:600;}
+    input[type="text"]{
+      width:100%;
+      padding:.75rem .9rem;
+      border-radius:12px;
+      border:1px solid rgba(255,255,255,.2);
+      background:#0f1116;
+      color:var(--text);
+      outline: none;
+    }
+    input[type="text"]::placeholder{color:#8892a6;}
+    input[type="text"]:focus-visible{
+      box-shadow: var(--ring) var(--focus);
+      border-color: transparent;
+    }
+
+    .hint{color:var(--muted); font-size:.95rem}
+    .inline{
+      display:flex; gap:.65rem; align-items:center;
+    }
+    .checkbox{
+      width:1.1rem; height:1.1rem; accent-color: var(--brand);
+    }
+
+    .btn{
+      display:inline-flex; align-items:center; justify-content:center;
+      gap:.5rem; padding:.8rem 1rem; border-radius:12px;
+      background: var(--brand); color:#041c13; font-weight:700; border:none; cursor:pointer;
+      transition: transform .06s ease, box-shadow .2s ease, background .2s ease;
+    }
+    .btn:hover{ background: var(--brand-600); }
+    .btn:active{ transform: translateY(1px); }
+    .btn[disabled]{ opacity:.5; cursor:not-allowed; }
+    .btn.secondary{
+      background: transparent; color: var(--text);
+      border:1px solid rgba(255,255,255,.12);
+    }
+    .btn.secondary:hover{ background: rgba(255,255,255,.04); }
+
+    .paypal-slot{min-height:68px}
+
+    .notice{
+      font-size:.95rem; color:var(--muted);
+    }
+
+    .qr{
+      display:grid; gap:.5rem; justify-items:start;
+    }
+    .qr img{
+      border-radius:12px; border:1px solid rgba(255,255,255,.12);
+      background:#0f1116;
+    }
+    figure{margin:0}
+    figcaption{font-size:.92rem; color:var(--muted); margin-top:.35rem}
+
+    .status{
+      padding:.75rem .9rem; border-radius:12px; background:#161923;
+      border:1px solid rgba(255,255,255,.12); color:var(--muted);
+    }
+    .status[aria-live]{outline:none}
+    .error{ color: var(--danger); }
+
+    footer{
+      border-top:1px solid rgba(255,255,255,.08);
+      margin-top: var(--space-6);
+    }
+    .foot{
+      display:flex; gap:.75rem; flex-wrap: wrap; align-items:center; justify-content:space-between;
+      color:var(--muted);
+      font-size:.95rem;
+    }
+
+    @media (prefers-reduced-motion: reduce){
+      *{transition:none !important; animation:none !important}
+    }
+  </style>
+
+  <!-- Structured Data (SEO): SoftwareSourceCode/Product -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Product",
+    "name":"Multicloud Surveillance Platform — Private Repository Access",
+    "description":"Production-grade infrastructure code with Terraform/Kubernetes, CI/CD, security baselines, runbooks.",
+    "brand":{"@type":"Brand","name":"Multicloud Platform"},
+    "offers":{
+      "@type":"Offer",
+      "price":"59.00",
+      "priceCurrency":"USD",
+      "availability":"https://schema.org/InStock"
+    }
+  }
+  </script>
+</head>
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header>
+    <div class="wrap hero" role="banner">
+      <h1>Private Access — Multicloud Surveillance Platform</h1>
+      <p class="lead">Production-grade IaC (Terraform/Kubernetes), CI/CD pipelines, security baselines, and architecture docs. Private GitHub invite within <strong>24h</strong> (often 1–2h). Purchase implies EULA acceptance.</p>
+    </div>
+  </header>
+
+  <main id="main" class="wrap" role="main">
+    <div class="grid" aria-describedby="purchase-desc">
+      <!-- Purchase card -->
+      <section class="card" aria-labelledby="purchase-title">
+        <h2 id="purchase-title" style="margin-top:0">Purchase Access</h2>
+        <p id="purchase-desc" class="notice">To provision access we need your GitHub username. You’ll receive a collaborator invite to the private repository.</p>
+
+        <form id="buy-form" novalidate>
+          <fieldset>
+            <legend class="sr-only">Buyer details</legend>
+
+            <label for="gh">GitHub Username</label>
+            <input
+              id="gh"
+              name="gh"
+              type="text"
+              inputmode="latin"
+              autocomplete="username"
+              placeholder="your-github-handle"
+              aria-describedby="gh-hint"
+              required
+              pattern="^[A-Za-z0-9](?:[A-Za-z0-9]|-(?=[A-Za-z0-9])){0,38}$"
+            />
+            <div id="gh-hint" class="hint">
+              Allowed: letters/numbers, hyphens (no trailing/leading hyphen, max 39 chars).
+            </div>
+
+            <div class="inline">
+              <input id="eula" class="checkbox" type="checkbox" required />
+              <label for="eula">I accept the <a href="./EULA.html" target="_blank" rel="noopener">EULA</a> and <a href="./terms.html" target="_blank" rel="noopener">Terms of Sale</a>.</label>
+            </div>
+          </fieldset>
+
+          <div class="inline">
+            <button id="prep-btn" class="btn" type="button" aria-controls="paypal-slot" aria-expanded="false">
+              Continue to PayPal — US$59
+            </button>
+            <a class="btn secondary" href="./pricing.html" aria-label="View pricing details">Pricing</a>
+          </div>
+
+          <div id="status" class="status" role="status" aria-live="polite"></div>
+
+          <div id="paypal-slot" class="paypal-slot" aria-label="PayPal checkout area"></div>
+        </form>
+
+        <noscript>
+          <p class="error"><strong>JavaScript required.</strong> Enable JavaScript or use the QR option below.</p>
+        </noscript>
+      </section>
+
+      <!-- Alternative: QR Pay -->
+      <aside class="card" aria-labelledby="qr-title">
+        <h2 id="qr-title" style="margin-top:0">Pay by QR (Fallback)</h2>
+        <figure class="qr">
+          <a href="https://www.paypal.com/ncp/payment/JGUJ36TRU2JJU" target="_blank" rel="noopener noreferrer">
+            <img src="./paypal-qr.png" alt="Pay with PayPal QR" width="220" height="220" loading="lazy" decoding="async">
+          </a>
+          <figcaption>Scan to purchase — private repo invite within 24h (often 1–2h).</figcaption>
+        </figure>
+        <p class="notice">After paying by QR, email <a href="mailto:falvarezpinto@gmail.com">falvarezpinto@gmail.com</a> with your GitHub username to speed up provisioning.</p>
+      </aside>
+    </div>
+  </main>
+
+  <footer role="contentinfo">
+    <div class="wrap foot">
+      <p>© <span id="year"></span> Multicloud Platform — All rights reserved.</p>
+      <p><a href="./privacy.html">Privacy</a> · <a href="./terms.html">Terms</a> · <a href="mailto:falvarezpinto@gmail.com">Support</a></p>
+    </div>
+  </footer>
+
+  <!-- PayPal SDK will be lazy-loaded for performance -->
+  <script>
+    // Utility: load PayPal SDK once
+    let paypalLoaded = false;
+    function loadPayPalSDK() {
+      return new Promise((resolve, reject) => {
+        if (paypalLoaded) return resolve();
+        const script = document.createElement('script');
+        script.src = "https://www.paypal.com/sdk/js?client-id=Af1EYUBrBx5ZPzpnY026secBrtHtu6HOe9rdCn-rjN_XYyc6sRegkaMzw9-_VUb8JmHBpa21jtSm8eTl&currency=USD&intent=capture";
+        script.async = true;
+        script.onload = () => { paypalLoaded = true; resolve(); };
+        script.onerror = () => reject(new Error('Failed to load PayPal SDK'));
+        document.head.appendChild(script);
+      });
+    }
+
+    // A11y helpers
+    const $ = (s, el=document) => el.querySelector(s);
+    const statusEl = $('#status');
+    function say(msg, isError=false){
+      statusEl.textContent = msg || '';
+      statusEl.classList.toggle('error', !!isError);
+    }
+
+    // GitHub handle validation (HTML5 pattern + JS feedback)
+    function validHandle(h) {
+      return /^[A-Za-z0-9](?:[A-Za-z0-9]|-(?=[A-Za-z0-9])){0,38}$/.test(h);
+    }
+
+    (function init(){
+      const gh = $('#gh');
+      const eula = $('#eula');
+      const prep = $('#prep-btn');
+      const paypalSlot = $('#paypal-slot');
+
+      // Year
+      $('#year').textContent = new Date().getFullYear();
+
+      // Re-validate on input
+      function checkReady(){
+        const ok = validHandle(gh.value.trim()) && eula.checked;
+        prep.disabled = !ok;
+        return ok;
+      }
+      ['input','change','blur'].forEach(ev=>{
+        gh.addEventListener(ev, checkReady);
+        eula.addEventListener(ev, checkReady);
+      });
+      checkReady();
+
+      prep.addEventListener('click', async () => {
+        if (!checkReady()) {
+          say('Please enter a valid GitHub username and accept the EULA.', true);
+          return;
+        }
+        say('Loading PayPal…');
+
+        try{
+          await loadPayPalSDK();
+        }catch(e){
+          say('Could not load PayPal. Please retry or use QR.', true);
+          return;
+        }
+
+        // Render PayPal Buttons (once). Disable prep button and expand region for A11y.
+        prep.setAttribute('aria-expanded', 'true');
+        prep.disabled = true;
+
+        // Ensure container empty before render (idempotent)
+        paypalSlot.innerHTML = '';
+
+        // Render
+        // eslint-disable-next-line no-undef
+        paypal.Buttons({
+          onInit: function(data, actions){
+            // keep disabled if inputs go invalid again
+            if (!checkReady()) actions.disable();
+            gh.addEventListener('input', () => checkReady() ? actions.enable() : actions.disable());
+            eula.addEventListener('change', () => checkReady() ? actions.enable() : actions.disable());
+          },
+          createOrder: (data, actions) => {
+            const ghUser = gh.value.trim();
+            if (!validHandle(ghUser) || !eula.checked){
+              say('Please enter a valid GitHub username and accept the EULA.', true);
+              return;
+            }
+            return actions.order.create({
+              purchase_units: [{
+                amount: { value: '59.00' },
+                description: 'Private access to Multicloud Surveillance Platform repository',
+                custom_id: ghUser
+              }],
+              application_context: { shipping_preference: 'NO_SHIPPING' }
+            });
+          },
+          onApprove: (data, actions) => actions.order.capture().then((details) => {
+            // Best-effort notify your webhook endpoint, if you have one:
+            // fetch('https://your-worker-or-lambda/webhooks/paypal', {method:'POST',headers:{'Content-Type':'application/json'},
+            //   body: JSON.stringify({event_type:'CHECKOUT.ORDER.APPROVED', resource:{ id: details.id, purchase_units:[{ custom_id: $('#gh').value.trim() }] }})
+            // }).catch(()=>{});
+            window.location.href = './success.html?orderId=' + encodeURIComponent(details.id);
+          }),
+          onCancel: () => {
+            say('Payment cancelled. You can try again or use QR.');
+            window.location.href = './cancel.html';
+          },
+          onError: (err) => {
+            console.error(err);
+            say('Something went wrong with the payment. Please retry or use QR.', true);
+            window.location.href = './cancel.html';
+          },
+          style: {
+            layout: 'horizontal',
+            color: 'gold',
+            shape: 'rect',
+            label: 'paypal',
+            tagline: false
+          }
+        }).render('#paypal-slot').then(() => {
+          say(''); // clear message once rendered
+          paypalSlot.scrollIntoView({behavior:'smooth', block:'center'});
+        });
+      });
+    })();
+  </script>
+</body>
+</html>
