Update EULA section with new links
Removed EULA checkbox and label, added links to Privacy, Terms, and Support.

--- a/index.html
+++ b/index.html
@@ -233,8 +233,7 @@
             </div>
 
             <div class="inline">
-              <input id="eula" class="checkbox" type="checkbox" required />
-              <label for="eula">I accept the <a href="./EULA.html" target="_blank" rel="noopener">EULA</a> and <a href="./terms.html" target="_blank" rel="noopener">Terms of Sale</a>.</label>
+              <p><a href="./privacy.html">Privacy</a> · <a href="./terms.html">Terms</a> · <a href="./support.html">Support</a></p>
             </div>
           </fieldset>
 
